tests/invalid_inputs/sema/double_to_char.cpp
// test that implicit 'double->char' is forbidden

int main() {
	char c = 3.14;
}
